# eternity2

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  justfile
deploy/: nginx.conf  (+1 more)
engine/: Cargo.toml  README.md
engine/src/: bitset.rs  break_solver.rs  generator.rs  lib.rs  official.rs  paths.rs  solver.rs  types.rs
engine/tests/: bucas_interop.rs
research/experiments/common/: Cargo.toml
research/experiments/common/crates/e2-core/: Cargo.toml
research/experiments/common/crates/e2-core/src/: board.rs  generator.rs  lib.rs  score.rs  stats.rs
research/experiments/common/crates/e2-io/: Cargo.toml
research/experiments/common/crates/e2-io/src/: bucas.rs  csv.rs  format.rs  instance.rs  lib.rs  site.rs  tests.rs
research/experiments/dfs-study/engine/: Cargo.toml
research/experiments/dfs-study/engine/crates/dfs-codegen/: Cargo.toml
research/experiments/dfs-study/engine/crates/dfs-core/: Cargo.toml
research/experiments/dfs-study/engine/crates/dfs-engine/: Cargo.toml
research/experiments/dfs-study/engine/crates/dfs-io/: Cargo.toml
research/experiments/dfs-study/engine/crates/dfs-run/: Cargo.toml
research/experiments/repair-study/engine/: Cargo.toml
research/experiments/repair-study/engine/crates/repair-engine/: Cargo.toml
research/experiments/repair-study/engine/crates/repair-run/: Cargo.toml
research/experiments/single-core-benchmark/engine/: Cargo.toml
research/experiments/single-core-benchmark/engine/crates/bench-audit/: Cargo.toml
research/experiments/single-core-benchmark/engine/crates/bench-grid/: Cargo.toml
research/starter-kit/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PROMPT.md  README.md  llms.txt
research/starter-kit/data/: README.md  official.json
research/starter-kit/examples/: backtracking.rs  bench.rs  bound.rs  convert.rs  generate.rs  generate_batch.rs  my_solver.rs  score.rs  sweep.rs  verify.rs
research/starter-kit/examples/data/: known-469.edges
research/starter-kit/scripts/: compare.py
research/starter-kit/src/: analysis.rs  fit.rs  lib.rs  run.rs  runner.rs  solver.rs
research/starter-kit/tests/: kit.rs
research/topics/adversarial-piece-set/compute/: Cargo.toml  PLAN.md
research/topics/adversarial-piece-set/compute/src/: main.rs
research/topics/beam-width-smc/compute/: Cargo.toml  PLAN.md
research/topics/beam-width-smc/compute/src/: main.rs
research/topics/border-mismatch-share/compute/: Cargo.toml
research/topics/border-mismatch-share/compute/src/: main.rs
research/topics/cas-annular/compute/: Cargo.toml  PLAN.md
research/topics/cas-annular/compute/src/: main.rs
research/topics/clue-corridors/compute/: Cargo.toml  PLAN.md  stats.py
research/topics/clue-corridors/compute/src/: ladder.rs  main.rs
research/topics/clue-puzzle-pieces/compute/: Cargo.toml  README.md
research/topics/clue-puzzle-pieces/compute/src/: main.rs
research/topics/constraint-immediacy/compute/: Cargo.toml  PLAN.md
research/topics/constraint-immediacy/compute/src/: main.rs
research/topics/design-recipe-464/compute/: Cargo.toml  PLAN.md  boards.txt
research/topics/design-recipe-464/compute/src/: main.rs
research/topics/entropy-area-law/compute/: Cargo.toml  README.md
research/topics/entropy-area-law/compute/src/: main.rs
research/topics/flux-invariants/compute/: Cargo.toml  PLAN.md
research/topics/flux-invariants/compute/src/: main.rs
research/topics/forbidden-patterns/compute/: Cargo.toml  README.md
research/topics/forbidden-patterns/compute/src/: main.rs
research/topics/frame-is-not-the-basin/compute/: Cargo.toml  PLAN.md
research/topics/frame-is-not-the-basin/compute/src/: main.rs
research/topics/frame-manifold/compute/: Cargo.toml  PLAN.md
research/topics/frame-manifold/compute/src/: main.rs
research/topics/hardness-peak/compute/: Cargo.toml  README.md
research/topics/hardness-peak/compute/src/: main.rs
research/topics/irreducible-hard-region/compute/: Cargo.toml  PLAN.md
research/topics/irreducible-hard-region/compute/src/: main.rs
research/topics/ledger-prune/compute/: Cargo.toml  PLAN.md
research/topics/ledger-prune/compute/data/: community_464s.json
research/topics/ledger-prune/compute/src/: main.rs
research/topics/n13-encoding-cliff/compute/: Cargo.toml  PLAN.md  cpsat_cliff.py
research/topics/n13-encoding-cliff/compute/instances/: inst_n10_c22_s1.json  inst_n10_c22_s2.json  inst_n10_c22_s3.json  inst_n10_c22_s4.json  inst_n10_c22_s5.json  inst_n11_c22_s1.json  inst_n11_c22_s2.json  inst_n11_c22_s3.json  inst_n11_c22_s4.json  inst_n11_c22_s5.json  inst_n12_c22_s1.json  inst_n12_c22_s2.json  inst_n12_c22_s3.json  inst_n12_c22_s4.json  inst_n12_c22_s5.json  inst_n13_c22_s1.json  inst_n13_c22_s2.json  inst_n13_c22_s3.json  inst_n13_c22_s4.json  inst_n13_c22_s5.json  inst_n14_c22_s1.json  inst_n14_c22_s2.json  inst_n14_c22_s3.json  inst_n14_c22_s4.json  inst_n14_c22_s5.json  inst_n15_c22_s1.json  inst_n15_c22_s2.json  inst_n15_c22_s3.json  inst_n15_c22_s4.json  inst_n15_c22_s5.json  inst_n16_c22_s1.json  inst_n16_c22_s2.json  inst_n16_c22_s3.json  inst_n16_c22_s4.json  inst_n16_c22_s5.json
research/topics/n13-encoding-cliff/compute/src/: main.rs
research/topics/no-forced-moves/compute/: Cargo.toml  README.md
research/topics/no-forced-moves/compute/src/: main.rs
research/topics/no-height-function/compute/: Cargo.toml  PLAN.md
research/topics/no-height-function/compute/src/: main.rs
research/topics/parity-defect-floor/compute/: Cargo.toml  PLAN.md
research/topics/parity-defect-floor/compute/src/: main.rs
research/topics/permutation-code-wall/compute/: Cargo.toml  PLAN.md
research/topics/permutation-code-wall/compute/src/: main.rs
research/topics/phase-transition/compute/: Cargo.toml  README.md
research/topics/phase-transition/compute/src/: main.rs
research/topics/piece-theft/compute/: Cargo.toml  README.md
research/topics/piece-theft/compute/src/: main.rs
research/topics/prune-vs-speed/compute/: Cargo.toml  README.md
research/topics/prune-vs-speed/compute/src/: main.rs
(+2973 files in other folders)
