[package]
name = "eternity2-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Eternity II puzzle engine: path-driven backtracking DFS, puzzle generator, official piece set. Compiles to WASM."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = true

# wasm-pack's bundled wasm-opt rejects current rustc output; run system
# wasm-opt manually if needed.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
