# Standalone workspace for the single-core benchmark: all fifteen solvers.
#
# Lifted verbatim from the v2 research vault (crates/*) — the SAME code that
# produced the published results — and made self-contained here. Two families
# share one puzzle-in / bucas-url-out contract:
#
#   * native engine family (naive + CSP presets, ranks 5–15): one binary,
#     `run_algo --algo NAME`, site-schema Puzzle JSON in.
#   * strong engines (producer, blackwood, verhaard, alns, ranks 1–4): one
#     binary each (vol232_w1_producer_trie, blackwood_bt, verhaard_faithful_v2,
#     alns_only), CSV variant in, driven by ../scripts/run_standalone.sh.
#
# Plus verify_bucas (the one canonical scorer, never trust an engine's self
# report) and gen_variants (regenerates the corner-pinned puzzle variants).
#
#   cargo build --release          # builds every binary
#   ./target/release/run_algo --list
#   ./target/release/run_algo --puzzle ../variants/variant_00.json \
#       --algo border_first_lcv --seed 1 --budget-ms 60000 --emit out.url

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

# Release profile mirrors the vault's benchmark build so throughput numbers are
# comparable to the published run.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
