# Self-contained compute crate for the clue-corridors topic. Everything reads
# the starter kit by path, so the official instance and the one canonical
# rim-excluding scorer are the site's own, never re-implementations.
[package]
name = "clue-corridors"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "corridors"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
