# Self-contained compute crate for the clue-corridors topic. Everything reads
# the starter kit by path, so the official instance and the one canonical
# rim-excluding scorer are the site's own, never re-implementations.
[package]
name = "clue-corridors"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "corridors"
path = "src/main.rs"

# Stage-2 A/B ladder. The substrate's board size is a compile-time feature, so
# the ladder is built once per rung: --features size-8 .. size-16 (default 16).
[[bin]]
name = "ladder"
path = "src/ladder.rs"

[features]
size-8 = ["e2-kit/size-8"]
size-10 = ["e2-kit/size-10"]
size-12 = ["e2-kit/size-12"]
size-14 = ["e2-kit/size-14"]
size-16 = ["e2-kit/size-16"]

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
