# Reproduction package for research/topics/constraint-immediacy.
# Standalone crate (own [workspace]) with a path dep on the starter kit.

[package]
name = "constraint-immediacy"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[workspace]

[[bin]]
name = "constraint_immediacy"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
