# Self-contained compute crate for the design-recipe-464 topic. It rescores the
# five bundled community boards (three 464s, two public 460s) straight from
# their viewer URLs and computes the break geometry the article's claim rests
# on: per-row break bands, double-break cells, break indices, and the pairwise
# tile-Hamming basin map.
[package]
name = "design-recipe-464"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "break_geometry"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
