# Self-contained compute crate for the entropy-area-law topic. Path-depends on the
# shared engine for the official piece set.
[package]
name = "entropy-area-law"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "entropy_area_law"
path = "src/main.rs"

[dependencies]
eternity2-engine = { path = "../../../../engine" }

[profile.release]
opt-level = 3
lto = true
