# flux-invariants checker — recomputes the Flux and Character Invariants paper's
# instance facts and its endgame certificate from the official instance through
# the starter kit. See PLAN.md for the claim map.
[package]
name = "flux-invariants-check"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[[bin]]
name = "flux_invariants"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde_json = "1"

[profile.release]
opt-level = 3
