# Self-contained compute crate for the forbidden-patterns topic. It depends on
# the shared engine via a path dependency so it reuses the official piece set and
# edge conventions without duplicating any puzzle data.
[package]
name = "forbidden-patterns"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "forbidden_patterns"
path = "src/main.rs"

[dependencies]
eternity2-engine = { path = "../../../../engine" }

[profile.release]
opt-level = 3
lto = true
