# Self-contained compute crate for the frame-is-not-the-basin topic. Builds on
# the starter kit by path so the official instance, the canonical rim-excluding
# scorer, and the per-cell fit arithmetic are the site's own, never
# re-implementations. Shares the frame-generation idea with the frame-manifold
# topic but asks a different question: does a strong frame predict the interior
# ceiling?
[package]
name = "frame-is-not-the-basin"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "framefirst"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
