# Self-contained compute crate for the hardness-peak topic. It depends on the
# shared engine via a path dependency so it reuses the same generator and DFS
# solver the site ships, without duplicating any puzzle data.
[package]
name = "hardness-peak"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "hardness_peak"
path = "src/main.rs"

[dependencies]
eternity2-engine = { path = "../../../../engine" }

[profile.release]
opt-level = 3
lto = true
