# hard-region localization measurement — runs a restarting exact-match filler
# on generated solvable boards through the starter kit and records where the
# search frontier stalls. See PLAN.md for the claim map.
[package]
name = "irreducible-hard-region"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[[bin]]
name = "hard_region"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde_json = "1"

[profile.release]
opt-level = 3
