# Self-contained compute crate for the no-forced-moves topic. Path-depends on the
# shared engine for the official piece set and edge conventions.
[package]
name = "no-forced-moves"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "no_forced_moves"
path = "src/main.rs"

[dependencies]
eternity2-engine = { path = "../../../../engine" }

[profile.release]
opt-level = 3
lto = true
