# no-height-function checker — measures the two break-topology obstructions
# (odd dual cores; non-conserved signed per-color current) on committed
# high-scoring boards, through the starter kit's board parser. See PLAN.md.
[package]
name = "no-height-function-check"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[[bin]]
name = "no_height_function"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde_json = "1"

[profile.release]
opt-level = 3
