# Self-contained checker for the parity-defect-floor topic. It reaches the
# official piece set and edge conventions through the starter kit by path, so
# the numbers here come from the same substrate as every other engine.
[package]
name = "parity-defect-floor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "parity_defect_floor"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
