# permutation-code-wall checker — reproduces WEFT's coding-theory lens on E2
# through the starter kit's ONE canonical scorer. See PLAN.md for the claim map.
[package]
name = "permutation-code-wall-check"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
publish = false

[[bin]]
name = "permutation_code_wall"
path = "src/main.rs"

[dependencies]
e2-kit = { path = "../../../starter-kit" }
serde_json = "1"

[profile.release]
opt-level = 3
