# Self-contained compute crate for the phase-transition topic. It depends on the
# shared engine via a path dependency so it reuses the official piece set without
# duplicating any puzzle data.
[package]
name = "phase-transition"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "phase_transition"
path = "src/main.rs"

[dependencies]
eternity2-engine = { path = "../../../../engine" }

[profile.release]
opt-level = 3
lto = true
