# Self-contained compute crate for the prune-vs-speed topic. Path-depends on the
# shared engine for the puzzle generator and the depth-first solver.
[package]
name = "prune-vs-speed"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "prune_vs_speed"
path = "src/main.rs"

[dependencies]
eternity2-engine = { path = "../../../../engine" }

[profile.release]
opt-level = 3
lto = true
